--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Great to do</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
